fixed the last section small title

--- a/style.scss
+++ b/style.scss
@@ -799,7 +799,6 @@ body {
       font-family: "Rubik";
       line-height: 25px;
       letter-spacing: 5px;
-      font-style: bold;
     }
     .line {
       width: 60px;
@@ -1058,7 +1057,6 @@ body {
       font-family: "Rubik";
       line-height: 25px;
       letter-spacing: 5px;
-      font-style: bold;
     }
     .line {
       width: 60px;
